k8s/deployment-stable.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: awallet
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: awallet-arc56-registry-stable-deployment
  namespace: awallet
spec:
  selector:
    matchLabels:
      app: awallet-arc56-registry-stable
  replicas: 2
  template:
    metadata:
      labels:
        app: awallet-arc56-registry-stable
    spec:
      containers:
        - name: arc56-registry
          image: scholtz2/arc56-registry:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
              protocol: TCP
          readinessProbe:
            tcpSocket:
              port: 8080
            initialDelaySeconds: 5
            timeoutSeconds: 5
            failureThreshold: 2
          livenessProbe:
            tcpSocket:
              port: 8080
            initialDelaySeconds: 10
            timeoutSeconds: 5
            failureThreshold: 2
            terminationGracePeriodSeconds: 1
---
apiVersion: v1
kind: Service
metadata:
  name: awallet-arc56-registry-stable-service
  namespace: awallet
spec:
  type: ClusterIP
  selector:
    app: awallet-arc56-registry-stable
  ports:
    - name: http
      protocol: TCP
      appProtocol: http
      port: 8080
      targetPort: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: awallet-stable-deployment
  namespace: awallet
spec:
  selector:
    matchLabels:
      app: awallet-stable
  replicas: 6
  template:
    metadata:
      labels:
        app: awallet-stable
    spec:
      imagePullSecrets:
      - name: regcred
      containers:
        - name: awallet-stable
          image: scholtz2/a-wallet:1.2026.10.07-stable
          imagePullPolicy: Always
          ports: 
            - containerPort: 8080
              protocol: TCP
          readinessProbe:
            tcpSocket:
              port: 8080
            initialDelaySeconds: 1
            timeoutSeconds: 5  
            failureThreshold: 2
          livenessProbe:
            tcpSocket:
              port: 8080
            initialDelaySeconds: 1
            timeoutSeconds: 5  
            failureThreshold: 2
            terminationGracePeriodSeconds: 1
          volumeMounts:
            - name: awallet-stable-conf
              mountPath: /app/config.json
              subPath: config.json
      volumes:
        - name: awallet-stable-conf
          configMap:
            name: awallet-stable-conf
            
---

apiVersion: v1
kind: Service
metadata:
  name: awallet-stable-service
  namespace: awallet
spec:
  type: ClusterIP
  selector:
    app: awallet-stable
  ports:
    - name: http
      protocol: TCP
      appProtocol: http
      port: 8080
      targetPort: 8080

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: awallet-www-stable
  namespace: awallet
  annotations: 
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
    cert-manager.io/cluster-issuer: letsencrypt
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  tls:
  - hosts:
    - www.a-wallet.net
    secretName: www.a-wallet.net
  rules:
  - host: www.a-wallet.net
    http:
      paths:
      - path: /arc56-registry/(.*)
        pathType: Prefix
        backend:
          service:
            name: awallet-arc56-registry-stable-service
            port:
              number: 8080
      - path: /(.*)
        pathType: Prefix
        backend:
          service:
            name: awallet-stable-service
            port:
              number: 8080
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: awallet-stable
  namespace: awallet
  annotations: 
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
    cert-manager.io/cluster-issuer: letsencrypt
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  tls:
  - hosts:
    - a-wallet.net
    secretName: a-wallet.net
  rules:
  - host: a-wallet.net
    http:
      paths:
      - path: /arc56-registry/(.*)
        pathType: Prefix
        backend:
          service:
            name: awallet-arc56-registry-stable-service
            port:
              number: 8080
      - path: /(.*)
        pathType: Prefix
        backend:
          service:
            name: awallet-stable-service
            port:
              number: 8080
